fix: define proper parent for watcha theme

--- a/login/theme.properties
+++ b/login/theme.properties
@@ -1,4 +1,4 @@
-parent=base
+parent=keycloak
 import=common/keycloak
 
 styles=node_modules/patternfly/dist/css/patternfly.min.css node_modules/patternfly/dist/css/patternfly-additions.min.css lib/zocial/zocial.css css/login.css
